<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.joti.tuduu.MainActivity">
    <item
        android:id="@+id/miCategories"
        android:orderInCategory="50"
        android:title="@string/action_categories"
        app:showAsAction="never" />
    <item
        android:id="@+id/miDeleteDone"
        android:orderInCategory="50"
        android:title="@string/delete_completed"
        app:showAsAction="never" />
    <item
        android:id="@+id/miDeleteAll"
        android:orderInCategory="50"
        android:title="@string/delete_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/miSettings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
