<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        tools:context=".TaskActivity">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/taskname"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/category"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/taskdesc"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:minLines="1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/priority"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/spPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbHasDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:layout_marginBottom="-5dp" />

            <TextView
                android:id="@+id/tvDeadlineLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textSize="14sp" />
        </LinearLayout>


        <EditText
            android:id="@+id/tvDeadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:focusable="false"
            android:text=""
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbIsDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp" />

            <TextView
                android:id="@+id/tvIsDoneLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:onClick="btnCancelOnClick"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnOK"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:onClick="btnOKOnClick"
                android:text="@string/ok" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>